clusters/dijkstra/navidrome/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: navidrome
  labels:
    name: navidrome
