clusters/dijkstra/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
              readOnly: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "30m"
            limits:
              memory: "384Mi"
              cpu: "1000m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data-pvc
        - name: music
          persistentVolumeClaim:
            claimName: navidrome-music-pvc
